# sublime-claude

./: .gitignore  ClaudeCode.sublime-settings  ClaudeOutput-codex.hidden-tmTheme  ClaudeOutput-copilot.hidden-tmTheme  ClaudeOutput.hidden-tmTheme  ClaudeOutput.sublime-syntax  Context.sublime-menu  Default.sublime-commands  Default.sublime-keymap  Default.sublime-mousemap  Main.sublime-menu  NOTES.md  README.md  ROADMAP.md  backends.py  claude_code.py  codebase_search.py  commands.py  commands_context.py  commands_core.py  commands_session.py  commands_terminal.py  commands_tools.py  commands_ui.py  commands_voice.py  constants.py  context_parser.py  core.py  error_handler.py  listeners.py  mcp_marketplace.json  mcp_server.py  memory.py  notalone.py  output.py  output_format.py  output_input.py  output_models.py  output_permissions.py  output_plan.py  (+27 more)
bridge/: base.py  codex_main.py  copilot_main.py  main.py  openai_main.py  rpc_helpers.py  terminal.py
claude_agent_sdk/: __init__.py
hooks/: pre_compact.py
mcp/: server.py
terminal/: image.py
tests/: __init__.py  mock_sublime.py  test_at_commands.py  test_attach_commands.py  test_batch_allow.py  test_codebase_search.py  test_command_parser.py  test_constants.py  test_context_gauge.py  test_context_parser.py  test_drag_drop.py  test_error_handler.py  test_git_commands.py  test_guardrails.py  test_logger.py  test_mcp_marketplace.py  test_permissions.py  test_prompt_builder.py  test_rpc.py  test_session_state.py  test_session_tags.py  test_settings.py  test_skills_manager.py  test_smart_context.py  test_terminal.py  (+5 more)
